--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="build/css/_variables.css">
  <title>Document</title>
+
+ <style>
+  button {
+   background-color: var(--sd-global-primary);
+   color: var(--sd-global-white);
+   border: 0;
+   padding-top: var(--sd-global-medium);
+   padding-bottom: var(--sd-global-medium);
+   padding-right: var(--sd-global-medium);
+   padding-left: var(--sd-global-medium);
+   border-radius: var(--sd-global-spacing-small);
+  }
+ </style>
+
 </head>
 
 <body>
