updated button font size to 20px

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
    padding-right: var(--sd-global-medium);
    padding-left: var(--sd-global-medium);
    border-radius: var(--sd-global-spacing-small);
+   line-height: var(--sd-global-line-height);
   }
  </style>
 
