updated button font size

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    background-color: var(--sd-global-primary);
    color: var(--sd-global-white);
    border: 0;
+   font-size: var(--sd-global-button);
    padding-top: var(--sd-global-medium);
    padding-bottom: var(--sd-global-medium);
    padding-right: var(--sd-global-medium);
